etchASketch/styles.css
*{
    max-width: 100%;
    color: white ;
}

body {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    background-image: linear-gradient(180deg , white, grey ,black);
}

header {
    background-color: black;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.logo {
    display: flex;
    align-items: center;
}

.logo img {
    width: 50px;
    height: 50px;
}

.logo h5 {
    color: orange;
}

.nav ul {
    display: flex;
    align-items: center;
}

.nav ul li {
    margin-left: 40px;
    margin-right: 20px;
    list-style-type: none;
}

.nav ul li a {
    text-decoration: none;
    color: orange;
    padding: 10px;
}

.nav ul li a:hover {
    color: black;
    background-color: orange;
    border-radius: 10px;
    transition: 0.3s;
}

.heading {
    text-align: center;
    color: black;
    font-size: 50px;
    margin: 0px;
}

.socials-heading {
    background-image: linear-gradient(70deg, orange, grey, black);
}

.quick-links h3 {
    background-image: linear-gradient(70deg, orange, grey, black);
}

.quick-links ul {
    padding-inline-start: 0;
}

.quick-links li {
    list-style-type: none;
    padding: 12px;
}

.quick-links a:hover {
    color: orange;
}

.quick-links li a{
    text-decoration: none;
    font-size: 20px;
}

.quick-links .links {
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 0px;
}

.footer {
    background-color: black;
}

.footer h3 {
    padding: 5px;
    border-radius: 5px;
}

.container {
    display: flex;   
}

.container div {
    flex: 1;
    padding: 5px;
    justify-content: space-between;
}

.icons {
    font-size: 60px;
}

.icons i {
    padding: 15px;
}

.icons i:hover {
    color: orange;
}

.contact-links h3 {
    background-image: linear-gradient(70deg, orange, grey, black);
}

.email {
    background-color: grey;
    width: 80px;
    border-radius: 5px;
}

.email i:hover {
    color: orange;
    cursor: pointer;
}

.section {
    padding-bottom: 20px;           
}

.section-container div{
    border: 4px solid black;
    flex: 1 1 auto;
}

.main-btn {
    display: flex;
    align-items: center;
}

.main-btn{
    background: black;
    border-radius: 10px 10px 0px 0px;
}

.main-btn-left button:hover {
    border: 10px;
    font-size: 15px;
    cursor: pointer;
}

.main-btn-left input {
    border-radius: 10px;
}

.main-btn-left input:hover {
    background-color: orange;
    cursor: pointer;
}

.main-btn-right input{
    height: 40px;
    width: 100px;
    color: black;
    border-radius: 10px;
    font-size: 20px;
}

.main-btn-right input:hover {
    border: 2px orange;

}

.main-btn button {
    border-radius: 0%;
    background-image: linear-gradient(70deg, orange, grey, black);
    border-radius: 5px;
    height: 30px;
}

.main-btn div h2 {
    text-align: center;
}

.drawing-surface-heading {
    background-color: grey;
}

.drawing-surface {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: grey;
}

.section-container div h2 {
    text-align: center;
}

.drawing-grid {
    border: 0px solid grey;
    width: 800px;
    height: 800px;
    display: grid;
}

/*styling the home page*/

.home-heading h1{
    text-align: center;
    font-size: 40px;
}

.homePage-img img {
    position: relative;
}

.goToSketch-div {
    display: flex;
    justify-content: center;
}

.goToSketch {
    color: black;
    background-color: transparent;
    font-size: 63px;
    position: absolute;
    top: 60%;
    width: 70%;
    max-width: 500px;
    height: 100px;
    border: 5px solid black;
    border-radius: 60px;
    padding: 0px;
}

.goToSketch a {
    color: black;
    text-decoration: none;
}

.goToSketch a:hover {
    color: orange;
}

.goToSketch:hover {
    cursor: pointer;
    color: orange;
    background-color: black;
    transition: 0.5s;
}

/*styling the card slider*/

  
      

